fix waybar workspaces, change window gaps

--- a/config/waybar/styles/modules-left.css
+++ b/config/waybar/styles/modules-left.css
@@ -23,7 +23,7 @@
 #workspaces .active label {
 	font-size: 18px;
 	color: @accent;
-	padding: 1px 6px 0 0;
+	padding: 1px 5px 0 0;
 }
 
 /* window title & count */
